# fomo

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yaml  fomo.py  fomo_picking.patch  pyproject.toml
dynamo/: README_dynamo_installation.txt  dynamo_activate.m  dynamo_activate_linux.sh  dynamo_activate_linux_shipped_MCR.sh  dynamo_setup_cluster.sh  dynamo_setup_linux.sh
dynamo/MCRLinux/: VersionInfo.xml  patents.txt
dynamo/cuda/: .cproject  .pkglist  CINA_internal_notes.txt  config.sh  deviceQuery.txt  makefile  notes.txt
dynamo/ddemos/: demo_catalogue_crop_from_different_volume.m  demo_dTomogram_basic.m  demo_data_merge.m  demo_filamentWithTorsion.m  demo_place_in_tomogram.m  demo_place_isosurface.m  demo_place_objects.m  demo_subboxing_icosahedral.m  demo_subboxing_reconstitution.m
dynamo/doc/: dynamo_doc  dynamo_doc~  dynamo_version.m
dynamo/examples/: ctffind4Card.doc  dyneinMask.em  dyneinTemplate.em  example.tbl  filamentProject.param  filamentProject.param~  groel.em  herpes1956_64.em  invert_template.em  ribosome32.em  stratified_membrane.omd  template.em  thermo1.em  thermo2.em  virus64.em
dynamo/licenses/: license_dynamo.txt  license_dynamo.txt~
dynamo/mpi/: cluster_header_PBS.sh  cluster_header_SLURM.sh  dynamo_ccmatrix_assemble_mpi.cc  dynamo_ccmatrix_assemble_omp  dynamo_ccmatrix_assemble_omp.cc  dynamo_ccmatrix_compute_mpi.cc  (+16 more)
fomo/: .___init__.py  app.py  cli.py  dynamo_setup_EDITME.sh  style.py  viewer.py
fomo_tomo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_list_mrcs.py
(+162876 files in other folders)
